# Riggle

./: CMakeLists.txt  LICENSE  README.md  imgui.ini
Riggle_Core/: CMakeLists.txt
Riggle_Core/include/Riggle/: Animation.h  Bone.h  Character.h  IK_Solver.h  Math.h  Rig.h  Sprite.h
Riggle_Core/include/Riggle/Export/: ExportData.h  ExportService.h  IExporter.h
Riggle_Core/src/: Animation.cpp  Bone.cpp  Character.cpp  IK_Solver.cpp  Rig.cpp  Sprite.cpp
Riggle_Core/src/Export/: ExportService.cpp
Riggle_Editor/: CMakeLists.txt
Riggle_Editor/include/Editor/: EditorApplication.h  EditorController.h
Riggle_Editor/include/Editor/Export/: ExportManager.h  JSONExporter.h  PNGExporter.h
Riggle_Editor/include/Editor/Panels/: AnimationPanel.h  AssetBrowserPanel.h  AssetPanel.h  BasePanel.h  HierarchyPanel.h  PropertyPanel.h  ScenePanel.h  SpriteInspectorPanel.h  ViewportPanel.h
Riggle_Editor/include/Editor/Project/: ProjectManager.h
Riggle_Editor/include/Editor/Render/: BoneRenderer.h  SpriteRenderer.h
Riggle_Editor/include/Editor/Tools/: BoneCreationTool.h  BoneTool.h  IKSolverTool.h  SpriteManipulationTool.h  SpriteTool.h
Riggle_Editor/include/Editor/Utils/: AssetManager.h  DialogManager.h  FileDialogManager.h
Riggle_Editor/src/: AssetManager.cpp  EditorApplication.cpp  EditorController.cpp  main.cpp
Riggle_Editor/src/Export/: ExportManager.cpp  JSONExporter.cpp  PNGExporter.cpp
Riggle_Editor/src/Panels/: AnimationPanel.cpp  AssetBrowserPanel.cpp  AssetPanel.cpp  HierarchyPanel.cpp  PropertyPanel.cpp  ScenePanel.cpp  SpriteInspectorPanel.cpp  ViewportPanel.cpp
Riggle_Editor/src/Project/: ProjectManager.cpp
Riggle_Editor/src/Render/: BoneRenderer.cpp  SpriteRenderer.cpp
Riggle_Editor/src/Tools/: BoneCreationTool.cpp  BoneTool.cpp  IKSolverTool.cpp  SpriteManipulationTool.cpp  SpriteTool.cpp
Riggle_Editor/src/Utils/: AssetManager.cpp  DialogManager.cpp  FileDialogManager.cpp  miniz.c
scripts/: build.bat  build_debug.bat
